tech/operation/k8项目/Istio/lstio-demo.yml
apiVersion: v1
kind: Service
metadata:
  name: lsnginx
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: lsnginx-pod

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lsnginx-v1
  labels:
    app: lsnginx-pod
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lsnginx-pod
      version: v1
  template:
    metadata:
      labels:
        app: lsnginx-pod
        version: v1
    spec:
      containers:
      - name: lsnginx-pod
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lsnginx-v2
  labels:
    app: lsnginx-pod
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lsnginx-pod
      version: v2
  template:
    metadata:
      labels:
        app: lsnginx-pod
        version: v2
    spec:
      containers:
      - name: lsnginx-pod
        image: nginx:latest
        ports:
        - containerPort: 80

---
# 创建 Gateway, VirtualService 和 DestinationRule

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: lsnginx-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lsnginx-vs
spec:
  hosts:
  - "*"
  gateways:
  - lsnginx-gw
  http:
  - route:
    - destination:
        host: lsnginx.test.svc.cluster.local      # 指定 K8S 中的 svc 资源名字
        subset: v1
        port:
          number: 80
      weight: 90
    - destination:
        host: lsnginx.test.svc.cluster.local      # 指定 K8S 中的 svc 资源名字
        subset: v2
        port:
          number: 80
      weight: 10
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: lsnginx-dr
spec:
  host: lsnginx.test.svc.cluster.local            # 指定 K8S 中的 svc 资源名字
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
